--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
 			
 		</aside>
 		<footer id="rodape">
+			<p>Edição de video by Ricardo Wollmer</p>
 			<p>2022 - by Julio Cesar Rodrigues dos Santos<br>
 			juliocesarrodriguesdossantos@gmail.com</p>
 		</footer>
