--- a/index.html
+++ b/index.html
@@ -86,7 +86,10 @@
 				<source src="scania.mp4" type="video/mp4" >
 			
 			</video>
-
+			
+			<iframe style="max-width: 76%; padding-top: 5px; align:center;"  src="https://www.youtube.com/embed/1VNPlAR_yws" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
+			<iframe  style="max-width: 76%; padding-top: 5px; align:center;" src="https://www.youtube.com/embed/a8vYlA0iGnU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
+			<iframe  style="max-width: 76%; padding-top: 5px; align:center;" src="https://www.youtube.com/embed/YIC2xcjGIFE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			<h2>Análise de emissões</h2>
 			<p> Análise de emissões com Opacimetro Bosh BEA 714.</p>
 			
