--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<ul>
 				<li onmouseover="mudaFoto('home.png')" onmouseout="mudaFoto('logo.jpg')"><a href="index.html">Home</a></li>
 				<li onmouseover="mudaFoto('fotos.png')" onmouseout="mudaFoto('logo.jpg')"><a href="fotos.html">Foto</a></li>
-								
+				<li onmouseover="mudaFoto('flags.png')" onmouseout="mudaFoto('logo.jpg')"><a href="ingles.html">English</a></li>				
 			</ul>
 		</nav>
 		</header>
