--- a/ingles.html
+++ b/ingles.html
@@ -40,10 +40,12 @@
 			</header>
 
 			<h2>Who we are</h2>
-			<p>The <span style="font-weight:900;">Phoenix Hidrogênio</span> It emerged from the incessant search for a new consciousness of society, which looks at the planet in an integral way, promoting today, what we want as a future.</p>
-			<p>With the prospect of being<em> first Brazilian technology company in the use of hydrogen
-in scale </em>. From the development of programs and projects, based on sustainability and eco-efficiency practices
-providing solutions that meet society's expectations.</p>
+			<p>The <span style="font-weight:900;">Phoenix Hidrogênio</span>  emerged from the need for a new perspective for society, that integrally looks at the planet. This novel perspective is focused on promoting today what we want as a future.</p>
+			<p>With the strategy of being<em> first Brazilian technology company in the use of hydrogen
+in scale </em>.As the first Brazilian technology company to fully rely on the use of
+hydrogen on large scale, our practices are based on sustainability and eco-
+efficient processes. Our goal is based not only on what society expects from a
+company, but also on what meets their real needs.</p>
 
 			<figure class="foto-legenda">
 				<img src = "DSCN8053.jpg"/>
@@ -53,10 +55,18 @@ providing solutions that meet society's expectations.</p>
 				</figcaption>
 			</figure>
 
-			<h2>Historical</h2>
-			<p>In 2005, based on an old dream, that of carrying out a transformation in the way of using
-energy resources, the founder of Phoenix Hidrogênio, Jorge Israel, begins its trajectory. In its own
-garage, seeks a way to save fuel using an alternative source.</p>
+			<h2>Our beginning</h2>
+			<p>In 2005, based on an old dream transforming the way energy resources are
+used, the founder of Phoenix Hidrogênio, Jorge Israel, begins his trajectory. In
+his garage, he looks for a way to save fuel using an alternative source. He
+begins the saga of efficiency, reliability, and continuous improvement of the
+hydrogen production process. After countless attempts, he develops a working
+prototype that had been tested in several conditions and with extremely
+satisfactory results. This outcome proves the efficiency of the system. In 2021,
+the initiative takes shape with the implementation of the project in scalar form.
+By bringing together a multidisciplinary team of technicians, and initiating the
+implementation of the UDT - Technology Development Unit, PHOENIX
+HIDROGENIO is on its way to conquering markets.</p>
 			<p>The saga for efficiency, reliability and continuous improvement of the
 hydrogen production process, after numerous attempts, Jorge Israel develops a working prototype, which has been tested in several
 conditions and with extremely satisfactory results. This proves the system's efficiency.</p>
@@ -66,9 +76,9 @@ Technology Development Unit, PHOENIX HIDROGENIO walks
 to conquer markets.</p>
 			
 			<h2>Institutional Objective</h2>
-			<p>Provide the company with tools and means to insert its
-technologies, in the world market/scenario, aimed at the production of
-clean energy. Through research production and patent registration.</p>
+			<p>Provide the company with tools and means to insert its technologies in the
+world market/scenario, aimed at the production of clean energy through
+research production and patent registration.</p>
 			
 			<video id="filme" controls="controls" poster="filme.jpg" style="max-width: 76%; padding-top: 5px; align:center;">
 				<source src="apresentacao.mp4" type="video/mp4" >
