--- a/fotos.html
+++ b/fotos.html
@@ -54,7 +54,7 @@
 	</section>
 
 <footer id="rodape">
-			<p>CEO Jorge Israel israel.phoenix@hotmail.com</p>
+			<p>Direção: Jorge Israel israel.phoenix@hotmail.com</p>
 			<p>Edição de video by Ricardo Wollmer</p>
 			<p> 2022 - by Julio Cesar Rodrigues dos Santos<br>
 			<p>juliocesarrodriguesdossantos@gmail.com</p>
