--- a/fotosIngles.html
+++ b/fotosIngles.html
@@ -54,7 +54,7 @@
 	</section>
 
 <footer id="rodape">
-			<p>CEO Jorge Israel israel.phoenix@hotmail.com</p>
+			<p>Management: Jorge Israel israel.phoenix@hotmail.com</p>
 			<p> 2022 - by Julio Cesar Rodrigues dos Santos<br>
 			<p>juliocesarrodriguesdossantos@gmail.com</p>
 		</footer>
