--- a/ingles.html
+++ b/ingles.html
@@ -133,7 +133,7 @@ research production and patent registration.</p>
 			
 		</aside>
 		<footer id="rodape">
-			<p>CEO Jorge Israel israel.phoenix@hotmail.com</p>
+			<p>Management: Jorge Israel israel.phoenix@hotmail.com</p>
 			<p>Video edition by Ricardo Wollmer</p>
 			<p>2022 - by Julio Cesar Rodrigues dos Santos<br>
 			juliocesarrodriguesdossantos@gmail.com</p>
