--- a/fotos.html
+++ b/fotos.html
@@ -49,6 +49,12 @@
 	<li id="foto04"><span> Teste prático</span></li>
 	<li id="foto05"><span>Teste no torquimetro </span></li>
 	<li id="foto06"><span> Avaliação final</span></li>
+	<fieldset><legend>Volvo</legend><li id="volvo1"><span></span></li>
+		<li id="volvo2"><span></span></li>
+		<li id="volvo3"><span></span></li>
+		<a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vTxSs2YmqQmbj7fMY7dNMgn7XJisf6uR5FSFSn2wjzXz_uTJJLQ-BnRqO-P-xhyLnOZQ0t1u-XZUexU/pubhtml" target="tela">Gráficos</a>
+	
+	</fieldset>
 </ul>
 		</article>
 	</section>
