--- a/fotosIngles.html
+++ b/fotosIngles.html
@@ -52,8 +52,16 @@
 	<fieldset><legend>Volvo</legend><li id="volvo1"><span></span></li>
 		<li id="volvo2"><span></span></li>
 		<li id="volvo3"><span></span></li>
-		<a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vTxSs2YmqQmbj7fMY7dNMgn7XJisf6uR5FSFSn2wjzXz_uTJJLQ-BnRqO-P-xhyLnOZQ0t1u-XZUexU/pubhtml" target="tela">Gráficos</a>
-	
+		<table>
+		<tr>
+		<td><a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vTxSs2YmqQmbj7fMY7dNMgn7XJisf6uR5FSFSn2wjzXz_uTJJLQ-BnRqO-P-xhyLnOZQ0t1u-XZUexU/pubhtml"><img src="grafico.jpg"></a></td>
+		<td><a href="https://www.youtube.com/watch?v=uBhgIVmasQM" ><img src="logo-youtube.jpg" alt="Youtube"></a></td>
+		</tr>
+		<tr>
+			<td>Graphics</td>
+			<td>Videos</td>
+		</tr>
+		</table>
 	</fieldset>
 </ul>
 		</article>
