--- a/fotosIngles.html
+++ b/fotosIngles.html
@@ -56,10 +56,12 @@
 		<tr>
 		<td><a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vTxSs2YmqQmbj7fMY7dNMgn7XJisf6uR5FSFSn2wjzXz_uTJJLQ-BnRqO-P-xhyLnOZQ0t1u-XZUexU/pubhtml"><img src="grafico.jpg"></a></td>
 		<td><a href="https://www.youtube.com/watch?v=uBhgIVmasQM" ><img src="logo-youtube.jpg" alt="Youtube"></a></td>
+		<td><a href="merged.pdf" target="_blank"><img src="auto.jpg" alt="Opacimetro"></a></td>
 		</tr>
 		<tr>
 			<td>Graphics</td>
 			<td>Videos</td>
+			<td>Opacimeter</td>
 		</tr>
 		</table>
 	</fieldset>
