--- a/fotos.html
+++ b/fotos.html
@@ -1,6 +1,14 @@
 <!DOCTYPE HTML>
 <html lang = "pt-br">
 <head>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-Q0XT2GK844"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-Q0XT2GK844');
+</script>
 	<meta charset = "UTF-8"/>
 	<title> Phonenix Hidrogênio </title>
 	<link rel="stylesheet" type="text/css" href="estilo.css";>
