--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 		<hgroup>
 			<h1>Phoenix Hidrogênio<h1>
 			<h2>A evolução está chegando</h2>
+			<span id="clock"></span>
 		</hgroup>
 
 		<img id="icone" src ="logo.jpg">
