--- a/ingles.html
+++ b/ingles.html
@@ -22,6 +22,7 @@
 		<hgroup>
 			<h1>Phoenix Hidrogênio<h1>
 			<h2>The evolution is coming</h2>
+			<span id="clock"></span>
 		</hgroup>
 
 		<img id="icone" src ="logo.jpg">
