--- a/fotos.html
+++ b/fotos.html
@@ -63,7 +63,7 @@
 		<table>
 		<tr>
 		<td><a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vTxSs2YmqQmbj7fMY7dNMgn7XJisf6uR5FSFSn2wjzXz_uTJJLQ-BnRqO-P-xhyLnOZQ0t1u-XZUexU/pubhtml"><img src="grafico.jpg"></a></td>
-		<td><a href="https://www.youtube.com/watch?v=uBhgIVmasQM" ><img src="logo-youtube.jpg" alt="Youtube"></a></td>
+		<td><a target="_blank" href="https://youtu.be/_Jhv0m6-da8" ><img src="logo-youtube.jpg" alt="Youtube"></a></td>
 		<td><a href="merged.pdf" target="_blank"><img src="auto.jpg" alt="Opacimetro"></a></td>
 		</tr>
 		<tr>
@@ -78,7 +78,7 @@
 	<iframe width="200" height="195" src="https://www.youtube.com/embed/ju4QV1vXVCU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	</li>
 	<li>
-	<iframe width="200" height="195" src="https://www.youtube.com/embed/3EL3Fhq2L0k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	<iframe width="200" height="195" src="https://www.youtube.com/embed/IrwX2-7gS_E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	</li>
 </ul>
 		</article>
