--- a/fotos.html
+++ b/fotos.html
@@ -73,7 +73,34 @@
 		</tr>
 		</table>
 	</fieldset>
+	<br>
 	
+	<fieldset><legend>Apresentação EATON 23 Fevereiro 2023</legend>
+		<li id="foto1"><span></span></li>
+		<li id="foto2"><span></span></li>
+		<li id="foto3"><span></span></li>
+		<li id="foto4"><span></span></li>
+		<li id="foto5"><span></span></li>
+		<li id="foto6"><span></span></li>
+		<li id="foto7"><span></span></li>
+		<li id="foto8"><span></span></li>
+		<li id="foto9"><span></span></li>
+		
+	</fieldset>
+	<br>
+	<fieldset><legend>Apresentação ZF 24 Fevereiro 2023</legend>
+		<li id="zf1"><span></span></li>
+		<li id="zf2"><span></span></li>
+		<li id="zf3"><span></span></li>
+		<li id="zf4"><span></span></li>
+		<li id="zf5"><span></span></li>
+		<li id="zf6"><span></span></li>
+		<li id="zf7"><span></span></li>
+		<li id="zf8"><span></span></li>
+		<li id="zf9"><span></span></li>
+		
+	</fieldset>
+
 	<li>
 	<iframe width="200" height="195" src="https://www.youtube.com/embed/ju4QV1vXVCU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	</li>
