--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <html language="pt-br">
-<p>Confira o <a href="https://www.freecodecamp.org/" target="_blank" rel="noopener noreferrer">freeCodeCamp</a>.</p>
+<p>Confira o <a href="SCI.html"</a>.</p>
   <head>
     <meta charset="utf-8">
     <title>CICLO P</title>
