--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html language="pt-br">
-<p><a></a>SCI <a href="SCI.html"</a>.</p>
-<p><a></a>ICS <a href="SCI.html"</a>.</p>
+<p><a></a>SCI <a href="SCI.html"</a>SCI</p>
+<p><a></a>ICS <a href="SCI.html"</a>ICS</p>
   <head>
     <meta charset="utf-8">
     <title>CICLO P</title>
